# genshin-ai-agent

./: .gitignore  LICENSE  README.md  build_exe.bat  config.yaml  debug_stat_recs.py  gui_app.py  main.py  pyproject.toml  run_gui.bat
genshin_agent/: abyss_cache.py  abyss_collector.py  abyss_note_translator.py  abyss_pipeline.py  abyss_planner.py  asset_manager.py  background_collector.py  config.py  crimsonwitch_collector.py  data_collector.py  database.py  gift_codes_pipeline.py  guide_collector.py  knowledge_collector.py  llm_client.py  nextjs_rsc.py  optimizer.py  paths.py  planner.py  promo_code_pipeline.py  report_generator.py  services.py  setup_wizard.py  theater_cache.py  theater_collector.py  theater_pipeline.py  theater_planner.py  wish_advisor.py
gui/: main_window.py  style.qss  workers.py
templates/: report.html.j2  report.md.j2  report_character.html.j2
tests/: crimsonwitch_all_builds.json  crimsonwitch_durin_raw.txt  debug_bennett_guide.py  debug_guide_structure.py  debug_slug.py  explore_abyss_current.json  explore_abyss_full.json  explore_fandom_abyss.html  explore_fandom_abyss.py  explore_fandom_abyss2.py  explore_fandom_api.py  explore_fandom_category.py  explore_fandom_floors_list.py  explore_fandom_index.py  explore_fandom_parse_Spiral_Abyss_main.json  explore_fandom_wikitext.py  explore_reliquary_sample.json  explore_weapon_sample.json  explore_yatta.py  explore_yatta2.py  explore_yatta_en.py  probe_crimsonwitch.py  probe_promo_code.py  probe_theater_wikitext.py  promo_code_wikitext.txt  test_abyss_pipeline.py  test_danger.py  test_database.py  (+8 more)
