[project]
name = "genshin-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "jinja2>=3.1.6",
    "langchain-openai>=1.3.3",
    "markdown>=3.10.2",
    "njsparser>=2.16",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "llm: test có gọi AI thật, tốn quota free hàng ngày của OpenRouter",
]
